--- a/parenting.qmd
+++ b/parenting.qmd
@@ -39,7 +39,7 @@ The objective of this study was to test the associations between 11 caregiver ag
 ![Positive Parenting](positiveparenting.png)
 :::
 
-:::{focus-on="cr-mymap" scale-by="1.0"}
+:::{focus-on="cr-mymap"}
 Data came from the fourth (2009-2013) and fifth (2012-2017) rounds of the UNICEF Multiple Indicator Cluster Surveys (MICS).
 :::
 
@@ -86,6 +86,7 @@ ggplot(global_data) +
 ```{r}
 #| fig-cap: "Countries in MICS"
 #| message: false
+#| fig-height: 5
 
 library(leaflet)
 
