--- a/spillover-of-violence/annotated-equation.qmd
+++ b/spillover-of-violence/annotated-equation.qmd
@@ -7,7 +7,7 @@ header-includes:
 
 
 \begin{equation*}
-  \eqnmark[violet]{node1}{\ln \left( \frac{p(\text{outcome})}{1- p(\text{outcome})} \right)}
+  \eqnmark[violet]{node1}{\ln \left( \frac{p(\text{physical abuse})}{1- p(\text{physical abuse})} \right)}
   \tikzmarknode{node2}{=}
   \eqnmarkbox[blue]{node3}{\beta_0}
   \eqnmark[black]{node4}{+}
@@ -17,9 +17,9 @@ header-includes:
   \eqnmark[black]{node8}{+}
   \eqnmarkbox[orange]{node9}{u_{0j}}
 \end{equation*}
-\annotate[yshift=-1em]{below,left}{node1}{logarithm of odds of outcome} 
+\annotate[yshift=-1em]{below,left}{node1}{logarithm of odds of physical abuse} 
 \annotate[yshift=1em]{left}{node3}{baseline log odds} 
-\annotate[yshift=-1em]{below,right}{node5}{parental discipline} 
+\annotate[yshift=-1em]{below,right}{node5}{violence} 
 \annotate[yshift=-2.5em]{below,right}{node7}{covariates}
 \annotate[yshift=-3.5em]{below,right}{node9}{country}
 
