--- a/spillover-of-violence/spillover-of-violence.qmd
+++ b/spillover-of-violence/spillover-of-violence.qmd
@@ -2,51 +2,31 @@
 title: "The Spillover of Macro-level Violence to Parental Physical Abuse of Children in Low- and Middle-Income Countries"
 author: "Global Families Research Team"
 date: "today"
-format: closeread-html
+format:
+  closeread-html:
+    cr-style:
+      narrative-text-color-sidebar: black
+      narrative-background-color-overlay: grey
+      narrative-background-color-sidebar: white
+      section-background-color: white
+    css: spillover-of-violence.css
 mermaid: 
   theme: default
+filters:
+  - social-share
+share:
+  permalink: "https://globalfamilies.quarto.pub/spillover-of-violence"
+  description: "Spillover of Violence"
+  twitter: false
+  facebook: true
+  reddit: true
+  stumble: false
+  tumblr: false
+  linkedin: true
+  email: true
+  mastodon: true
+  bsky: true
 ---
-
-# Background
-
-Through violence socialization processes, exposure to higher rates of violence in the macro context may spill over to family violence, including caregivers’ use of physical child abuse. 
-
-```{mermaid}
-flowchart LR
-  %% Nodes %%
-  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
-
-  macroviolence[higher rates of \nviolence in the \nmacro context]:::maize --> |"???"| pabuse[physical child abuse]:::maize
-
-  %% Links %%
-  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
-
-
-```
-
-# Objective
-
-This study examined the associations of violence occurring in macro contexts with parental physical abuse, after accounting for norms justifying women's exposure to intimate partner violence (IPV) and parental physical punishment against children.
-
-```{mermaid}
-flowchart LR
-  %% Nodes %%
-  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
-  
-  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
-
-  macroviolence[higher rates of \nviolence in the \nmacro context]:::maize --> |"???"| pabuse[physical child abuse]:::maize
-  
-  norms[norms justifying \nviolence]:::blue --> pabuse
-
-  %% Links %%
-  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
-
-```
-
-# Participants and Setting
-
-We used data from 435,131 households with a reference child aged 1 to 17 years across 43 countries from rounds 4 and 5 of the UNICEF Multiple Indicator Cluster Surveys.
 
 ```{r}
 #| output: false
@@ -77,9 +57,6 @@ MICScountries$country_iso <- countrycode(MICScountries$country,
 
 ```{r}
 #| echo: false
-#| fig-cap: "Countries in MICS"
-#| label: fig-2
-
 
 g <- list(showframe = TRUE, 
           showcoastlines = TRUE, 
@@ -116,19 +93,146 @@ p0 <- MICScountries %>%
          plot_bgcolor='transparent',
          paper_bgcolor='transparent')
 
+```
+
+:::{.cr-section}
+
+:::{focus-on="cr-intro"}
+Through violence socialization processes, exposure to higher rates of violence in the macro context may spill over to family violence, including caregivers’ use of physical child abuse. 
+:::
+
+:::{#cr-intro .scale-to-fill}
+```{mermaid}
+flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+
+  macroviolence[higher rates of \nviolence in the \nmacro context]:::maize --> |"???"| pabuse[physical child abuse]:::maize
+
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+
+```
+:::
+
+:::{focus-on="cr-researchquestion"}
+This study examined the associations of violence occurring in macro contexts with parental physical abuse, after accounting for norms justifying women's exposure to intimate partner violence (IPV) and parental physical punishment against children.
+:::
+
+:::{#cr-researchquestion .scale-to-fill}
+```{mermaid}
+flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  macroviolence[higher rates of \nviolence in the \nmacro context]:::maize --> |"???"| pabuse[physical child abuse]:::maize
+  
+  norms[norms justifying \nviolence]:::blue --> pabuse
+
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+```
+:::
+
+:::{focus-on="cr-earth"}
+We used data from 435,131 households with a reference child aged 1 to 17 years across 43 countries from rounds 4 and 5 of the UNICEF Multiple Indicator Cluster Surveys.
+:::
+
+:::{#cr-earth .scale-to-fill}
+```{r}
+#| echo: false
+#| fig-cap: "Countries in MICS"
+#| label: fig-2
+
 p0
 
 ```
+:::
 
-
-# Methods
-
+:::{focus-on="cr-analysis"}
 We employed multilevel logistic regression models to estimate the degree to which country-level violence—measured by rates of terrorism and political conflict, homicide, and women's exposure to IPV—was associated with parental physical abuse after controlling for norms justifying violence against women and children and socio-demographic factors.
+:::
 
-# Results
+:::{#cr-analysis .scale-to-fill}
+![Multilevel Logistic Regression](annotated-equation.png) 
+:::
 
-Results indicated that higher levels of endorsement of IPV (OR = 1.024, p < .001) and attitudes endorsing the use of physical punishment with children (OR = 1.016, p < .05) were both associated with higher odds of severe physical child abuse after controlling for covariates. The association of terrorism and political violence with severe physical abuse was mediated by norms that legitimize IPV (indirect b = 0.027, p = .005). 
+:::{focus-on="cr-results1"}
+Results indicated that higher levels of endorsement of IPV (OR = 1.024, p < .001) and attitudes endorsing the use of physical punishment with children (OR = 1.016, p < .05) were both associated with higher odds of severe physical child abuse after controlling for covariates. 
+:::
 
-# Conclusion
+:::{#cr-results1 .scale-to-fill}
+```{mermaid}
+flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
 
+  IPV[higher levels of \nendorsement of IPV]:::blue --> pabuse[physical child abuse]:::maize
+  
+  CP[attitudes endorsing \ncorporal punishment]:::blue --> pabuse
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+```
+:::
+
+:::{focus-on="cr-results2"}
+The association of terrorism and political violence with severe physical abuse was mediated by norms that legitimize IPV (indirect b = 0.027, p = .005). 
+:::
+
+:::{#cr-results2 .scale-to-fill}
+```{mermaid}
+flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  terrorism[terrorism and \npolitical violence]:::maize --> IPV[higher levels of \nendorsement of IPV]:::blue
+  
+  IPV --> pabuse[physical child abuse]:::maize
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+```
+:::
+
+:::{focus-on="cr-interventions"}
 Interventions aimed at reducing abusive parenting practices in LMICs may benefit from efforts to reduce social norms that support violence against women and children. These interventions should be responsive to trauma-informed approaches that recognize the effects of macro-level violence.
+:::
+
+:::{#cr-interventions .scale-to-fill}
+```{mermaid}
+flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef orange fill:#D86018,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  interventions:::orange --> IPV[higher levels of \nendorsement of IPV]:::blue
+  
+  IPV --> pabuse[physical child abuse]:::maize
+  
+  trauma[trauma informed \napproaches]:::red --> interventions
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+```
+:::
+
+:::
+
+
