--- a/spillover-of-violence/spillover-of-violence.qmd
+++ b/spillover-of-violence/spillover-of-violence.qmd
@@ -163,7 +163,7 @@ We employed multilevel logistic regression models.
 We estimated the factors associated with parental physical abuse.
 :::
 
-:::{focus-on="cr-analysis" pan-to="-30%,50%" scale-by="1.5"}
+:::{focus-on="cr-analysis" pan-to="-35%,50%" scale-by="1.5"}
 We controlled for country-level violence—measured by rates of terrorism and political conflict, homicide, and women's exposure to IPV
 :::
 
@@ -171,7 +171,7 @@ We controlled for country-level violence—measured by rates of terrorism and po
 We also controlled for other covariates, including norms justifying violence against women and children and socio-demographic factors.
 :::
 
-:::{focus-on="cr-analysis" pan-to="-90%,50%" scale-by="1.5"}
+:::{focus-on="cr-analysis" pan-to="-95%,50%" scale-by="1.5"}
 We accounted for the country in which study participants lived. 
 :::
 
@@ -205,13 +205,21 @@ flowchart LR
 The association of terrorism and political violence with severe physical abuse was mediated (statistically connected) by norms that legitimize IPV (indirect b = 0.027, p = .005). 
 :::
 
-:::{#cr-results2 .scale-to-fill}
+:::{#cr-results2}
 
 ```{r}
 #| fig-cap: "As political violence and terrorism increase, so does the probability of physical abuse"
 #| message: false
 
 spillover <- read_csv("spillover.csv")
+
+m <- list(
+  l = 50,
+  r = 50,
+  b = 100,
+  t = 100,
+  pad = 4
+)
 
 p_spillover <- plot_ly(data = spillover, 
                        x = ~percentile, 
@@ -226,11 +234,13 @@ p_spillover <- plot_ly(data = spillover,
                                      line = list(color = 'black',
                                                  width = 2)),
                        type = 'scatter', 
-                       mode = 'lines+markers') %>%
+                       mode = 'lines+markers',
+                       height = 500) %>%
   layout(title = 'As political violence and terrorism increase, <br>so does the probability of physical abuse.', 
          xaxis = list(title = "percentile of political violence and terrorism"),
          yaxis = list(title = "probability of abuse"),
-         hoverlabel = list(bgcolor = "white")) %>% 
+         hoverlabel = list(bgcolor = "white"),
+         margin = m) %>% 
   config(displayModeBar = FALSE)
 
 p_spillover # replay
